Doctor added form not created

--- a/MVC Assignment/Views/Shared/_Layout.cshtml
+++ b/MVC Assignment/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
         <li><a asp-controller="home" asp-action="index">Home</a></li>
         <li><a asp-controller="home" asp-action="projects">Projects</a></li>
         <li><a asp-controller="home" asp-action="Contact">Contact</a></li>
+        <li><a asp-controller="doctor" asp-action="index">Doctor</a></li>
         <li><a asp-controller="home" asp-action="about">About</a></li>
 </ol></nav>
     </header>
