--- a/MVC Assignment/Views/Doctor/Index.cshtml
+++ b/MVC Assignment/Views/Doctor/Index.cshtml
@@ -6,6 +6,12 @@
     <h4 class="fever">@ViewBag.fever</h4>
     }
 <form asp-action="Index" method="post">
+    <label>What Temperature scale do you want to use?</label>
+    <label>Celsius</label>
+    <input type="radio" name="name" value="Celsius" checked />
+    <label>Farenheit</label>
+    <input type="radio" name="name" value="Farenheit" />
+    <br />
     <label>Please input your temperature to check if you got fever. When done press enter! </label>
     <input type="number" name="temp" id="temp" requiredValue/>
 </form>
