--- a/MVC Assignment/Views/Shared/_Layout.cshtml
+++ b/MVC Assignment/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         <li><a asp-controller="home" asp-action="projects">Projects</a></li>
         <li><a asp-controller="home" asp-action="Contact">Contact</a></li>
         <li><a asp-controller="doctor" asp-action="index">Doctor</a></li>
+        <li><a asp-controller="NumberGuessing" asp-action="index">Number Guessing</a></li>
         <li><a asp-controller="home" asp-action="about">About</a></li>
 </ol></nav>
     </header>
