--- a/MVC Assignment/Views/NumberGuessing/Index.cshtml
+++ b/MVC Assignment/Views/NumberGuessing/Index.cshtml
@@ -12,5 +12,5 @@ else
 }
 <form asp-action="Index" method="post">
     <label>Please enter an integer number between 1-100! When done press enter.! :</label>
-    <input type="number" name="guess" id="guess" min="1" max="100" requiredValue />
+    <input type="number" name="guess" id="guess" min="1" max="100" tabindex="0" requiredValue />
 </form>
